--- a/frontend/src/stylesheets/main.css
+++ b/frontend/src/stylesheets/main.css
@@ -56,6 +56,7 @@
     text-decoration-line: none;
     color: white;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+    transition-duration: 0.5s;
   }
 
 .navbar-toggler-icon{
@@ -113,4 +114,19 @@
 
 #commandsDiv{
     background-color: #2F5B02;
+}
+
+#showCommands{
+    color: black;
+}
+
+#commandsText{
+    display: none;
+}
+
+.instructions{
+}
+
+::backdrop{
+    opacity: 0.75;
 }
