--- a/frontend/src/stylesheets/main.css
+++ b/frontend/src/stylesheets/main.css
@@ -124,9 +124,14 @@
     display: none;
 }
 
-.instructions{
-}
-
 ::backdrop{
     opacity: 0.75;
+}
+.mask-custom {
+    background-color: green;
+    border-radius: 2em;
+    backdrop-filter: blur(25px);
+    border: 2px solid rgba(0, 0, 0, 0.175);
+    background-clip: padding-box;
+    box-shadow: 10px 10px 10px rgba(46, 54, 68, 0.03);
 }
