--- a/frontend/src/stylesheets/main.css
+++ b/frontend/src/stylesheets/main.css
@@ -14,8 +14,6 @@
 
 }
 
-
-
 .navbar-brand{
     font-size: 50px;
     text-shadow: 2px 2px 4px rgba(255, 255, 255, 0.714);
@@ -157,7 +155,27 @@
  .table table-hober{
     background-color:green;
  }  
-
  
 
- 
+#carouselShopItems{
+    height: 50vh;
+    width: 50rem;
+    margin-top: 75px;
+}
+.shopItemTitle{
+    color: white;
+}
+.shopItemImg{
+    height: 50px;
+    align-self: center;
+}
+.shopItemDesc{
+    align-self: flex-end;
+    justify-self: baseline;
+    position: absolute;
+    bottom: 30px;
+    text-align: center;
+}
+.shopItemContainer{
+    display: flex;
+}
